--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-      "sass": "sass --watch ./sass/main.scss:.public/css/style.css"
-    },
+    "sass": "sass --watch ./sass/main.scss:./public/css/style.css"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alexis77360/ohmyfood.git"
